# ia-regression-project-team-2

./: .gitignore  .python-version  Dockerfile  README.md  app.py  dataClean.ipynb  dataCleanSara.ipynb  eda-dataset.ipynb  features.py  house_price_model.pkl  interiores_test.py  main.py  mi_modelo_entrenado.joblib  mi_modelo_entrenado_sara.joblib  model-sara.ipynb  model_training.py  newTest.csv  probar_modelo.ipynb  pyproject.toml  regresion.ipynb  test5.py  testing-max-prices.py  train.py  train_juan.ipynb  train_model.ipynb  train_result.txt  user_queries_log.csv
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
data_madrid/: datClean-encoding.csv  datClean.csv  dataClean.ipynb  datos_limpios.csv  houses_clean.csv
docs/: encoding-variables-categoricas.md  log-transform-target.md
ia_regression_project_team_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/: house_price_model.pkl  model_training.py
results_queries/: train_result.txt
streamlit/: app.py
