[project]
name = "ia-regression-project-team-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.4",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "pytest>=8.0.0",
]

[tool.mypy]
ignore_missing_imports = true
